<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlmasApp2</string>
    <string name="hello_world">Hello world!</string>

    <string name="menu_about_me">About me</string>
    <string name="menu_linear_layout">LinearLayout</string>
    <string name="menu_relative_layout">RelativeLayout</string>
    <string name="menu_grid_layout">GridLayout</string>
    <string name="menu_movies_data">Movies data</string>
    <string name="menu_seek_bar">Seek Bar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_name_title">My name:</string>
    <string name="my_name">Jose Ernesto Almas de Jesus Junior</string>
    <string name="class_session_title">Class session:</string>
    <string name="class_session">CSE 400</string>
    <string name="picture_title">A picture of me:</string>

    <string name="movies_stars">Stars: </string>

</resources>
